add link to nesf

--- a/template.yaml
+++ b/template.yaml
@@ -200,3 +200,8 @@ projects:
     description: Extend Crystalformer by incorporating richer structural information beyond distances using dynamic frames.
     url: https://omron-sinicx.github.io/crystalframer/
 
+  - title: 'Neural structure fields with application to crystal structure autoencoders'
+    journal: "Commun Mater 2023"
+    img: https://omron-sinicx.github.io/neural-structure-field/icon.png
+    description: Propose a decoder for crystal structures by representing the structures as 3D continuous fields.
+    url: https://omron-sinicx.github.io/neural-structure-field/
